--- a/index.html
+++ b/index.html
@@ -3,10 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
+    <!--**Services section -Nethmi** -->
+    <div class="container">
+        <div class="row">
+            <p class="display-6"><strong>Services</strong></p>
+            <p class="display-1"><strong>What we do</strong></p>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</p>
+        </div>
+        <div class="row d-flex justify-content-center">
+            <!--service card 1-->
+            <div class="col-md-4">
+                <div class="card p-5 my-3" style="width: 18rem;">
+                    <img class="card-img-top p-3" src="public/images/stack.png" alt="Photo of a stack">
+                    <div class="card-body text-center">
+                        <h5 class="card-title"><strong>Full Stack Development</strong></h5>
+                        <p class="card-text">JavaScript, Serverless</p>
+                    </div>
+                 </div>
+            </div>
+            <!--end of the service card 1-->
+            <!--service card 2-->
+            <div class="col-md-4">
+                <div class="card p-5 my-3" style="width: 18rem;">
+                    <img class="card-img-top p-3" src="public/images/cube.png" alt="Photo of a blockchains">
+                    <div class="card-body text-center">
+                        <h5 class="card-title"><strong>Blockchains</strong></h5>
+                        <p class="card-text">Private & Public blockchains</p>
+                    </div>
+                </div>
+            </div>
+            <!--end of the service card 2-->
+            <!--service card 3-->
+            <div class="col-md-4">
+                <div class="card p-5 my-3" style="width: 18rem;">
+                    <img class="card-img-top p-3" src="public/images/cloud-lock.png" alt="Photo of a stack">
+                    <div class="card-body text-center">
+                        <h5 class="card-title"><strong>Cloud enablement</strong></h5>
+                        <p class="card-text">JMicroservices, APIs, NoSQL</p>
+                    </div>
+                </div>
+            </div>
+            <!--end of the service card 3-->
+        </div>
+
+        <div class="row d-flex justify-content-center">
+            <!--service card 4-->
+            <div class="col-md-4">
+                <div class="card p-5 my-3" style="width: 18rem;">
+                    <img class="card-img-top p-3" src="public/images/mobile-development (1).png" alt="Photo of mobile application">
+                    <div class="card-body text-center">
+                        <h5 class="card-title"><strong>Mobile Applications</strong></h5>
+                        <p class="card-text">Hybrid, Native,PWA</p>
+                    </div>
+                 </div>
+            </div>
+            <!--end of the service card 1-->
+            <!--service card 2-->
+            <div class="col-md-4">
+                <div class="card p-5 my-3" style="width: 18rem;">
+                    <img class="card-img-top p-3" src="public/images/machine-learning.png" alt="Photo of a blockchains">
+                    <div class="card-body text-center">
+                        <h5 class="card-title"><strong>Machine Learning</strong></h5>
+                        <p class="card-text">Machine Learning, IoT and Big Data</p>
+                    </div>
+                </div>
+            </div>
+            <!--end of the service card 2-->
+        </div>
+    </div>
     
+    <!--**End of services section**-->
 </body>
 </html>
