Did some changes to services section in Home page

--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/index.css">
     <title>Document</title>
 </head>
 <body>
     <!--**Services section -Nethmi** -->
     <div class="container">
         <div class="row">
-            <p class="display-6"><strong>Services</strong></p>
-            <p class="display-1"><strong>What we do</strong></p>
+            <p><strong>Services</strong></p>
+            <p class="display-5"><strong>What we do</strong></p>
             <p class="lead">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</p>
         </div>
-        <div class="row d-flex justify-content-center">
+        <div class="row d-flex">
             <!--service card 1-->
-            <div class="col-md-4">
-                <div class="card p-5 my-3" style="width: 18rem;">
-                    <img class="card-img-top p-3" src="public/images/stack.png" alt="Photo of a stack">
+            <div class="col-md-4 rounded-2">
+                <div class="card p-5 my-3 justify-content-center align-items-center">
+                    <img class="card-img-top p-3 card-img-top-size" src="public/images/stack.png" alt="Photo of a stack">
                     <div class="card-body text-center">
                         <h5 class="card-title"><strong>Full Stack Development</strong></h5>
                         <p class="card-text">JavaScript, Serverless</p>
@@ -28,9 +30,9 @@
             </div>
             <!--end of the service card 1-->
             <!--service card 2-->
-            <div class="col-md-4">
-                <div class="card p-5 my-3" style="width: 18rem;">
-                    <img class="card-img-top p-3" src="public/images/cube.png" alt="Photo of a blockchains">
+            <div class="col-md-4 rounded-2">
+                <div class="card p-5 my-3 justify-content-center align-items-center">
+                    <img class="card-img-top p-3 card-img-top-size" src="public/images/cube.png" alt="Photo of a blockchains">
                     <div class="card-body text-center">
                         <h5 class="card-title"><strong>Blockchains</strong></h5>
                         <p class="card-text">Private & Public blockchains</p>
@@ -39,9 +41,9 @@
             </div>
             <!--end of the service card 2-->
             <!--service card 3-->
-            <div class="col-md-4">
-                <div class="card p-5 my-3" style="width: 18rem;">
-                    <img class="card-img-top p-3" src="public/images/cloud-lock.png" alt="Photo of a stack">
+            <div class="col-md-4 rounded-2">
+                <div class="card p-5 my-3 justify-content-center align-items-center">
+                    <img class="card-img-top p-3 card-img-top-size" src="public/images/cloud-lock.png" alt="Photo of a stack">
                     <div class="card-body text-center">
                         <h5 class="card-title"><strong>Cloud enablement</strong></h5>
                         <p class="card-text">JMicroservices, APIs, NoSQL</p>
@@ -49,32 +51,30 @@
                 </div>
             </div>
             <!--end of the service card 3-->
-        </div>
-
-        <div class="row d-flex justify-content-center">
             <!--service card 4-->
-            <div class="col-md-4">
-                <div class="card p-5 my-3" style="width: 18rem;">
-                    <img class="card-img-top p-3" src="public/images/mobile-development (1).png" alt="Photo of mobile application">
+            <div class="col-md-4 rounded-2">
+                <div class="card p-5 my-3 justify-content-center align-items-center">
+                    <img class="card-img-top p-3 card-img-top-size" src="public/images/mobile-development (1).png" alt="Photo of mobile application">
                     <div class="card-body text-center">
                         <h5 class="card-title"><strong>Mobile Applications</strong></h5>
                         <p class="card-text">Hybrid, Native,PWA</p>
                     </div>
                  </div>
             </div>
-            <!--end of the service card 1-->
-            <!--service card 2-->
-            <div class="col-md-4">
-                <div class="card p-5 my-3" style="width: 18rem;">
-                    <img class="card-img-top p-3" src="public/images/machine-learning.png" alt="Photo of a blockchains">
+            <!--end of the service card 4-->
+            <!--service card 5-->
+            <div class="col-md-4 rounded-2">
+                <div class="card p-5 my-3 justify-content-center align-items-center">
+                    <img class="card-img-top p-3 card-img-top-size" src="public/images/machine-learning.png" alt="Photo of a blockchains">
                     <div class="card-body text-center">
                         <h5 class="card-title"><strong>Machine Learning</strong></h5>
                         <p class="card-text">Machine Learning, IoT and Big Data</p>
                     </div>
                 </div>
             </div>
-            <!--end of the service card 2-->
+            <!--end of the service card 5-->
         </div>
+        
     </div>
     
     <!--**End of services section**-->
