made cards center aligned

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p class="display-5"><strong>What we do</strong></p>
             <p class="lead">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</p>
         </div>
-        <div class="row d-flex">
+        <div class="row d-flex justify-content-center">
             <!--service card 1-->
             <div class="col-md-4 rounded-2">
                 <div class="card p-5 my-3 justify-content-center align-items-center">
@@ -65,7 +65,7 @@
                  </div>
             </div>
             <!--end of the service card 4-->
-            
+
             <!--service card 5-->
             <div class="col-md-4 rounded-2">
                 <div class="card p-5 my-3 justify-content-center align-items-center">
