--- a/about.html
+++ b/about.html
@@ -16,15 +16,22 @@
     <!--begining of the about page section-->
     <div class="container">
         <div class="row">
-            <p class="display-6"><strong>About</strong></p>
-            <p class="display-1"><strong>We are product engineering specialists</strong></p>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetuer adipiscingLorem ipsum dolor sit amet, consectetuer adipiscing elit.elit.Lorem ipsum dolor sit amet, consectetuer adipiscing eliLorem ipsum dolor sit amet, consectetuer adipiscing elit.t</p>
+            <p><strong>About</strong></p>
+            <p class="display-5"><strong>We are product engineering specialists</strong></p>
+            <p class="lead" style="color: #374574;">Lorem ipsum dolor sit amet, consectetuer adipiscingLorem ipsum dolor sit amet, consectetuer adipiscing elit.elit.Lorem ipsum dolor sit amet, consectetuer adipiscing eliLorem ipsum dolor sit amet, consectetuer adipiscing elit.t</p>
         </div>
         <div class="row d-flex justify-content-center">
-            <div class="col-md-4">
-                <div class="row">
-                    
-                </div>
+            <div class="col-md-4 text-center">
+                <p class="font-size-numbers">+5</p>
+                <p class="font-size-text-under-numbers">Years of expertise</p>
+            </div>
+            <div class="col-md-4 text-center">
+                <p class="font-size-numbers">+500</p>
+                <p class="font-size-text-under-numbers">IT professionals</p>
+            </div>
+            <div class="col-md-4 text-center">
+                <p class="font-size-numbers">+200</p>
+                <p class="font-size-text-under-numbers">Projects</p>
             </div>
         </div>
     </div>
