--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="styles/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
@@ -19,10 +23,12 @@
     ></script>
   </head>
   <body>
+    <!--**Navbar** -->
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
+      <!--**Navbar container** -->
       <div class="container-fluid">
         <a href="" class="navbar-brand mb-0 h1">
-          <img src="images/icon1.png" class="img-fluid" width="65" >
+          <img src="images/icon1.png" class="img-fluid" width="65" />
           HCCS Web
         </a>
         <button
@@ -57,5 +63,111 @@
         </div>
       </div>
     </nav>
+    <!--**End of the Navbar** -->
+
+    <!--**Footer** -->
+    <footer class="bg-dark-blue text-white text-center text-lg-start">
+      <!-- Grid container -->
+      <div class="container p-4">
+        <!--Grid row-->
+        <div class="row">
+          <!--Grid column-->
+          <div class="col-lg-5 col-md-12 mb-8 mb-md-0">
+            <h5 class="">Products</h5>
+            <!-- Section: links -->
+            <div class="row pt-4">
+              <div class="col-4">
+                <a href="" class="nav-link active"> Home </a>
+              </div>
+              <div class="col-4">
+                <a href="" class="nav-link active"> About </a>
+              </div>
+            </div>
+            <div class="row pt-4">
+              <div class="col-4">
+                <a href="" class="nav-link active"> Services </a>
+              </div>
+              <div class="col-4">
+                <a href="" class="nav-link active"> Contact </a>
+              </div>
+            </div>
+          
+          </div>
+          <div class="col-lg-4 col-md-12 mb-8 mb-md-0 ">
+            <h5 class="">Connect</h5>
+            <!-- Grid container -->
+            <div class="container pt-4 ">
+              <!-- Section: Social media -->
+              <section class="mb-4 ">
+                <!-- Facebook -->
+                <a
+                  class="btn btn-outline-light btn-floating m-1"
+                  href="#!"
+                  role="button"
+                  ><i class="bi bi-facebook"></i>
+                </a>
+
+                <!-- Twitter -->
+                <a
+                  class="btn btn-outline-light btn-floating m-1"
+                  href="#!"
+                  role="button"
+                  ><i class="bi bi-twitter"></i>
+                </a>
+
+                <!-- Instagram -->
+                <a
+                  class="btn btn-outline-light btn-floating m-1"
+                  href="#!"
+                  role="button"
+                  ><i class="bi bi-instagram"></i>
+                </a>
+
+                <!-- Linkedin -->
+                <a
+                  class="btn btn-outline-light btn-floating m-1"
+                  href="#!"
+                  role="button"
+                  ><i class="bi bi-linkedin"></i>
+                </a>
+
+                <!-- Github -->
+                <a
+                  class="btn btn-outline-light btn-floating m-1"
+                  href="#!"
+                  role="button"
+                  ><i class="bi bi-envelope-fill"></i>
+                </a>
+              </section>
+              <!-- Section: Social media -->
+            </div>
+            <!-- Grid container -->
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class=" col-lg-3 col-md-12 mb-4 mb-md-0">
+
+            <h5 class="">Contact</h5>
+            <p>
+              <i class="bi bi-envelope-fill me-3"></i>
+              hccs@gmail.com
+            </p>
+            <p><i class="bi bi-house me-3"></i> No.04,Bambalapitiya, Sri Lanka</p>
+            
+            <p><i class="bi bi-telephone-fill me-3"></i> + 94 234 567 88</p>
+            <p><i class="bi bi-telephone-fill me-3"></i> + 94 234 567 89</p>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+
+          <!--Grid column-->
+        </div>
+        <!--Grid row-->
+      </div>
+      <!-- Grid container -->
+    </footer>
+     <!--End of footer-->
   </body>
 </html>
