made the basic structure of about page

--- a/about.html
+++ b/about.html
@@ -14,26 +14,114 @@
     <!--end of the nav bar-->
 
     <!--begining of the about page section-->
-    <div class="container">
-        <div class="row">
-            <p><strong>About</strong></p>
-            <p class="display-5"><strong>We are product engineering specialists</strong></p>
+    <div class="container-fuild">
+        <!--begining of top section-->
+        <div class="row mx-5">
+            <p class="fw-bold">About</p>
+            <p class="display-5 fw-bold"><strong>We are product engineering specialists</strong></p>
             <p class="lead" style="color: #374574;">Lorem ipsum dolor sit amet, consectetuer adipiscingLorem ipsum dolor sit amet, consectetuer adipiscing elit.elit.Lorem ipsum dolor sit amet, consectetuer adipiscing eliLorem ipsum dolor sit amet, consectetuer adipiscing elit.t</p>
         </div>
-        <div class="row d-flex justify-content-center">
+        <div class="row d-flex justify-content-center mx-5">
             <div class="col-md-4 text-center">
-                <p class="font-size-numbers">+5</p>
-                <p class="font-size-text-under-numbers">Years of expertise</p>
+                <p class="font-size-numbers fw-bold">+5</p>
+                <p class="font-size-text-under-numbers fw-bold">Years of expertise</p>
             </div>
             <div class="col-md-4 text-center">
-                <p class="font-size-numbers">+500</p>
-                <p class="font-size-text-under-numbers">IT professionals</p>
+                <p class="font-size-numbers fw-bold">+500</p>
+                <p class="font-size-text-under-numbers fw-bold">IT professionals</p>
             </div>
             <div class="col-md-4 text-center">
-                <p class="font-size-numbers">+200</p>
-                <p class="font-size-text-under-numbers">Projects</p>
+                <p class="font-size-numbers fw-bold">+200</p>
+                <p class="font-size-text-under-numbers fw-bold">Projects</p>
             </div>
         </div>
+        <!--end of top section-->
+
+        <!--begining of vision and mission section-->
+        <div class="row mx-5">
+            <p class="fw-bold text-center text-heading mt-5">Our Vission and Mission</p>
+            <hr class="mx-3" style="color: rgba(0,0,0,0.4);">
+        </div>
+        <div class="row mx-5">
+            <div class="col-md-6 text-center ">
+                <p class="fw-bold text-center text-heading my-5">Vision</p>
+                <p class="lead fw-bold text-center text-visionMission mx-5">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. </p>
+            </div>
+            <div class="col-md-6 text-center">
+                <p class="fw-bold text-center text-heading my-5">Mission</p>
+                <p class="lead fw-bold text-center text-visionMission mx-5">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. </p>
+            </div>
+        </div>
+        <!--end of vision and mission section-->
+
+        <!--begining of awards section-->
+        <div class="row mx-5">
+            <p class="fw-bold text-center text-heading mt-5">Awards</p>
+            <hr class="mx-3" style="color: rgba(0,0,0,0.4);">
+        </div>
+        <div class="row mx-5">
+            <!--card for award 1-->
+            <div class="col-md-3 rounded-2">
+                <div class="card p-5 my-3 justify-content-center align-items-center">
+                    <img class="card-img-top p-3 card-img-top-size" src="public/images/awards/award (1).png" alt="Photo of award1">
+                    <div class="card-body text-center">
+                        <h5 class="card-title"><strong>IoT Global Awards <br>2022</strong></h5>
+                    </div>
+                 </div>
+            </div>
+            <!--card for award 2-->
+            <div class="col-md-3 rounded-2">
+                <div class="card p-5 my-3 justify-content-center align-items-center">
+                    <img class="card-img-top p-3 card-img-top-size" src="public/images/awards/award.png" alt="Photo of award1">
+                    <div class="card-body text-center">
+                        <h5 class="card-title"><strong>CX Awards <br>2020</strong></h5>
+                        <p class="card-text">Best Workforce Optimisation Platform</p>
+                    </div>
+                 </div>
+            </div>
+            <!--card for award 3-->
+            <div class="col-md-3 rounded-2">
+                <div class="card p-5 my-3 justify-content-center align-items-center">
+                    <img class="card-img-top p-3 card-img-top-size" src="public/images/awards/olive-branches-award-symbol.png" alt="Photo of award1">
+                    <div class="card-body text-center">
+                        <h5 class="card-title"><strong>Award 3</strong></h5>
+                    </div>
+                 </div>
+            </div>
+            <!--card for award 4-->
+            <div class="col-md-3 rounded-2">
+                <div class="card p-5 my-3 justify-content-center align-items-center">
+                    <img class="card-img-top p-3 card-img-top-size" src="public/images/awards/trophy (2).png" alt="Photo of award1">
+                    <div class="card-body text-center">
+                        <h5 class="card-title"><strong>Award 4</strong></h5>
+                    </div>
+                 </div>
+            </div>
+        </div>
+        <!--end of awards section-->
+
+        <!--begining of location section-->
+        <div class="row bg-color mt-5">
+            <div class="col-md-6">
+                <p class="display-5 fw-bold text-white text-left m-5 p-3">Our Location</p>
+                <p class="fw-bold text-heading text-white m-5 p-3 text-center">Colombo</p>
+                <div class="col-md-3 ml-5 p-3">
+                    <p class="lead text-white ">
+                        No.4,<br>
+                        Colombo 4,<br>
+                        Bambalapitiya,<br>
+                        Sri Lanka.
+                    </p>
+                </div>
+                <div class="col-md-3 ml-5 p-3">
+                    <p class="lead text-white ">
+                        +94 123456788<br>
+                        +94 123456789
+                    </p>
+                </div>
+            </div>
+        </div>
+        <!--end of location section-->
     </div>
     <!--end of the about page section-->
 
