--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </head>
 <body>
     <!--**Services section -Nethmi** -->
-    <div class="container">
-        <div class="row">
-            <p><strong>Services</strong></p>
-            <p class="display-5"><strong>What we do</strong></p>
+    <div class="container-fuild">
+        <div class="row mx-5">
+            <p class="fw-bold">Services</p>
+            <p class="display-5 fw-bold">What we do</p>
             <p class="lead">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</p>
         </div>
-        <div class="row d-flex justify-content-center">
+        <div class="row d-flex justify-content-center mx-5">
             <!--service card 1-->
             <div class="col-md-4 rounded-2">
                 <div class="card p-5 my-3 justify-content-center align-items-center">
@@ -78,7 +78,7 @@
             </div>
             <!--end of the service card 5-->
         </div>
-        
+        <hr class="mx-3" style="color: rgba(0,0,0,0.4);">
     </div>
     
     <!--**End of services section**-->
