--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
             <p class="display-5 fw-bold"><strong>We are product engineering specialists</strong></p>
             <p class="lead" style="color: #374574;">Lorem ipsum dolor sit amet, consectetuer adipiscingLorem ipsum dolor sit amet, consectetuer adipiscing elit.elit.Lorem ipsum dolor sit amet, consectetuer adipiscing eliLorem ipsum dolor sit amet, consectetuer adipiscing elit.t</p>
         </div>
-        <div class="row d-flex justify-content-center mx-5">
+        <div class="row d-flex justify-content-center mx-5 my-5">
             <div class="col-md-4 text-center">
                 <p class="font-size-numbers fw-bold">+5</p>
                 <p class="font-size-text-under-numbers fw-bold">Years of expertise</p>
@@ -38,11 +38,11 @@
         <!--end of top section-->
 
         <!--begining of vision and mission section-->
-        <div class="row mx-5">
-            <p class="fw-bold text-center text-heading mt-5">Our Vission and Mission</p>
-            <hr class="mx-3" style="color: rgba(0,0,0,0.4);">
+        <div class="row justify-content-center" style="margin-top: 130px;">
+            <p class="fw-bold text-center text-heading">Our Vission and Mission</p>
+            <hr class="w-50" style="color: rgba(0,0,0,0.4);">
         </div>
-        <div class="row mx-5">
+        <div class="row mx-5 mt-3" style="margin-bottom: 100px;">
             <div class="col-md-6 text-center ">
                 <p class="fw-bold text-center text-heading my-5">Vision</p>
                 <p class="lead fw-bold text-center text-visionMission mx-5">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. </p>
@@ -55,7 +55,7 @@
         <!--end of vision and mission section-->
 
         <!--begining of awards section-->
-        <div class="row mx-5">
+        <div class="row mx-5 mt-5">
             <p class="fw-bold text-center text-heading mt-5">Awards</p>
             <hr class="mx-3" style="color: rgba(0,0,0,0.4);">
         </div>
@@ -66,6 +66,7 @@
                     <img class="card-img-top p-3 card-img-top-size" src="public/images/awards/award (1).png" alt="Photo of award1">
                     <div class="card-body text-center">
                         <h5 class="card-title"><strong>IoT Global Awards <br>2022</strong></h5>
+                        <p class="card-text">Best Workforce Optimisation Platform</p>
                     </div>
                  </div>
             </div>
@@ -85,6 +86,7 @@
                     <img class="card-img-top p-3 card-img-top-size" src="public/images/awards/olive-branches-award-symbol.png" alt="Photo of award1">
                     <div class="card-body text-center">
                         <h5 class="card-title"><strong>Award 3</strong></h5>
+                        <p class="card-text">Best Workforce Optimisation Platform</p>
                     </div>
                  </div>
             </div>
@@ -94,6 +96,7 @@
                     <img class="card-img-top p-3 card-img-top-size" src="public/images/awards/trophy (2).png" alt="Photo of award1">
                     <div class="card-body text-center">
                         <h5 class="card-title"><strong>Award 4</strong></h5>
+                        <p class="card-text">Best Workforce Optimisation Platform</p>
                     </div>
                  </div>
             </div>
