made the final section in about page

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <!--begining of top section-->
         <div class="row mx-5">
             <p class="fw-bold">About</p>
-            <p class="display-5 fw-bold"><strong>We are product engineering specialists</strong></p>
+            <p class="display-5 fw-bold">We are product engineering specialists</p>
             <p class="lead" style="color: #374574;">Lorem ipsum dolor sit amet, consectetuer adipiscingLorem ipsum dolor sit amet, consectetuer adipiscing elit.elit.Lorem ipsum dolor sit amet, consectetuer adipiscing eliLorem ipsum dolor sit amet, consectetuer adipiscing elit.t</p>
         </div>
         <div class="row d-flex justify-content-center mx-5 my-5">
@@ -105,22 +105,34 @@
 
         <!--begining of location section-->
         <div class="row bg-color mt-5">
-            <div class="col-md-6">
-                <p class="display-5 fw-bold text-white text-left m-5 p-3">Our Location</p>
-                <p class="fw-bold text-heading text-white m-5 p-3 text-center">Colombo</p>
-                <div class="col-md-3 ml-5 p-3">
-                    <p class="lead text-white ">
-                        No.4,<br>
-                        Colombo 4,<br>
-                        Bambalapitiya,<br>
-                        Sri Lanka.
-                    </p>
+            <div class="col-md-6 mt-5">
+                <p class="display-5 fw-bold text-white ms-5 ">Our Location</p>
+                <p class="fw-bold text-center text-heading mt-5 text-white">Colombo</p>
+                <div class="d-flex justify-content-center">
+                    <div class="ms-2 me-2">
+                        <!--code of the address section-->
+                        <p class="lead text-white">
+                            No. 04,<br>
+                            Colombo 04,<br>
+                            Bambalapitiya,<br>
+                            Sri Lanka. 
+                        </p>
+                    </div>
+                    <div class="ms-2 me-2">
+                        <!--code of the telephone section-->
+                        <p class="lead text-white">
+                            +94 123456788 <br>
+                            +94 123456789
+                        </p>
+                    </div>
                 </div>
-                <div class="col-md-3 ml-5 p-3">
-                    <p class="lead text-white ">
-                        +94 123456788<br>
-                        +94 123456789
-                    </p>
+            </div>
+            <div class="col-md-6 mt-5">
+                <!--code for the image-->
+                <div class="d-flex align-items-center justify-content-right">
+                    <div class="ms-3 me-3">
+                        <img class="p-3 img-size img-shadow img-border" src="public/images/location/NelumKuluna.jpg" alt="picture_of_location_Colombo">
+                    </div>
                 </div>
             </div>
         </div>
