Made location section responsive

--- a/about.html
+++ b/about.html
@@ -127,13 +127,11 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 mt-5">
+            <div class="col-md-6 mt-5 mb-5 d-flex justify-content-center align-items-center">
                 <!--code for the image-->
-                <div class="d-flex align-items-center justify-content-right">
-                    <div class="ms-3 me-3">
-                        <img class="p-3 img-size img-shadow img-border" src="public/images/location/NelumKuluna.jpg" alt="picture_of_location_Colombo">
+                    <div class="d-flex justify-content-center align-items-center">
+                        <img class="p-2 img-size img-shadow img-border" src="public/images/location/NelumKuluna.jpg" alt="picture_of_location_Colombo">
                     </div>
-                </div>
             </div>
         </div>
         <!--end of location section-->
