--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/about.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
@@ -65,6 +66,164 @@
     </nav>
     <!--**End of the Navbar** -->
 
+    <!--**Services section -Nethmi** -->
+    <div class="container-fuild">
+      <div class="row mx-5 text-dark-blue">
+        <p class="fw-bold">Services</p>
+        <p class="display-5 fw-bold ">What we do</p>
+        <p class="lead">
+          Lorem ipsum dolor sit amet, consectetuer adipiscing elit
+        </p>
+      </div>
+      <div class="row d-flex justify-content-center mx-5">
+        <!--service card 1-->
+        <div class="col-md-4 rounded-2">
+          <div class="card p-5 my-3 justify-content-center align-items-center">
+            <img
+              class="card-img-top p-3 card-img-top-size"
+              src="images/stack.png"
+              alt="Photo of a stack"
+            />
+            <div class="card-body text-center">
+              <h5 class="card-title">
+                <strong>Full Stack Development</strong>
+              </h5>
+              <p class="card-text">JavaScript, Serverless</p>
+            </div>
+          </div>
+        </div>
+        <!--end of the service card 1-->
+
+        <!--service card 2-->
+        <div class="col-md-4 rounded-2">
+          <div class="card p-5 my-3 justify-content-center align-items-center">
+            <img
+              class="card-img-top p-3 card-img-top-size"
+              src="images/cube.png"
+              alt="Photo of a blockchains"
+            />
+            <div class="card-body text-center">
+              <h5 class="card-title"><strong>Blockchains</strong></h5>
+              <p class="card-text">Private & Public blockchains</p>
+            </div>
+          </div>
+        </div>
+        <!--end of the service card 2-->
+
+        <!--service card 3-->
+        <div class="col-md-4 rounded-2">
+          <div class="card p-5 my-3 justify-content-center align-items-center">
+            <img
+              class="card-img-top p-3 card-img-top-size"
+              src="images/cloud-lock.png"
+              alt="Photo of a stack"
+            />
+            <div class="card-body text-center">
+              <h5 class="card-title"><strong>Cloud enablement</strong></h5>
+              <p class="card-text">JMicroservices, APIs, NoSQL</p>
+            </div>
+          </div>
+        </div>
+        <!--end of the service card 3-->
+
+        <!--service card 4-->
+        <div class="col-md-4 rounded-2">
+          <div class="card p-5 my-3 justify-content-center align-items-center">
+            <img
+              class="card-img-top p-3 card-img-top-size"
+              src="images/mobile-development (1).png"
+              alt="Photo of mobile application"
+            />
+            <div class="card-body text-center">
+              <h5 class="card-title"><strong>Mobile Applications</strong></h5>
+              <p class="card-text">Hybrid, Native,PWA</p>
+            </div>
+          </div>
+        </div>
+        <!--end of the service card 4-->
+
+        <!--service card 5-->
+        <div class="col-md-4 rounded-2">
+          <div class="card p-5 my-3 justify-content-center align-items-center">
+            <img
+              class="card-img-top p-3 card-img-top-size"
+              src="images/machine-learning.png"
+              alt="Photo of a blockchains"
+            />
+            <div class="card-body text-center">
+              <h5 class="card-title"><strong>Machine Learning</strong></h5>
+              <p class="card-text">Machine Learning, IoT and Big Data</p>
+            </div>
+          </div>
+        </div>
+        <!--end of the service card 5-->
+      </div>
+      <hr class="mx-3" style="color: rgba(0, 0, 0, 0.4)" />
+    </div>
+
+    <!--**End of services section**-->
+
+    <!--Winning products-->
+    <section class="mx-5">
+      <h1 class="topic-text text-dark-blue">In 2 years over 30 wining products</h1>
+
+      <p class="ms-4 fs-6">
+        We will work with you to create meaningful and impactful products for
+        you.
+      </p>
+      <div class="row d-flex justify-content-center mx-5">
+        <div class="col-md-4 pt-5 pb-5">
+          <img
+            src="images/product1.jpg"
+            class="img-fluid rounded mx-auto d-block"
+            alt="..."
+            width="400px"
+            height="300px"
+          />
+        </div>
+        <div class="col-md-4 pt-5 pb-5">
+          <img
+            src="images/product4.jpg"
+            class="img-fluid rounded mx-auto d-block"
+            alt="..."
+            width="400px"
+            height="300px"
+          />
+        </div>
+        <div class="col-md-4 pt-5 pb-5">
+          <img
+            src="images/product3.jpg"
+            class="img-fluid rounded mx-auto d-block"
+            alt="..."
+            width="400px"
+            height="300px"
+          />
+        </div>
+
+        <div class="col-md-4 pt-5 pb-5">
+          <img
+            src="images/product2.jpg"
+            class="img-fluid rounded mx-auto d-block"
+            alt="..."
+            width="400px"
+            height="300px"
+          />
+        </div>
+        <div class="col-md-4 pt-5 pb-5">
+          <img
+            src="images/product5.jpg "
+            class="img-fluid rounded mx-auto d-block"
+            alt="..."
+            width="400px"
+            height="300px"
+          />
+        </div>
+        <!-- <div class="col">
+                    <img src="images/product3.jpg" class="img-fluid rounded mx-auto d-block" alt="..." width="400px" height="300px">
+                  </div> -->
+      </div>
+    </section>
+
     <!--**Product section** -->
     <div class="bg-dark-blue text-white row">
       <div class="col-lg-6 pl-1 p-5">
@@ -75,43 +234,133 @@
           touch!
         </p>
         <div class="row pt-4">
-          <div class="col-lg-3 col-md-2 border border-2 rounded">jordan@hccs.io</div>
+          <div class="col-lg-3 col-md-2 border border-2 rounded">
+            jordan@hccs.io
+          </div>
           <div class="col-lg-3 col-md-2"></div>
-          <div class="col-lg-3 col-md-2 border border-2 rounded">+94 789 456 526</div>
+          <div class="col-lg-3 col-md-2 border border-2 rounded">
+            +94 789 456 526
+          </div>
         </div>
       </div>
-      <div class="col-lg-3 "></div>
+      <div class="col-lg-3"></div>
       <!--**Profiles** -->
       <div class="col-lg-3">
-        <div class="  row  pt-4">
-          <div class="col-lg-6 col-md-4">
+        <div class="row pt-4">
+          <div class="col-lg-4 col-md-4">
             <img src="images/person_1.png " class="" width="100" />
           </div>
           <div class="col-lg-6 col-md-4 line-space-min pt-3 pl-2">
-            <p class="text-name ">Jordan Belfort </p>
+            <p class="text-name">Jordan Belfort</p>
             <p class="">Chairman</p>
             <p>jordan@hccs.io</p>
             <p></p>
             <p></p>
           </div>
-          
         </div>
-        <div class="  row  pt-4 pb-4">
-          <div class="col-lg-6 col-md-4">
+        <div class="row pt-4 pb-4">
+          <div class="col-lg-4 col-md-4">
             <img src="images/person_2.png " class="" width="100" />
           </div>
           <div class="col-lg-6 col-md-4 line-space-min pt-3 pl-2">
-            <p class="text-name ">Andrew Tate</p>
+            <p class="text-name">Andrew Tate</p>
             <p class="">Chairman</p>
             <p>tate@hccs.io</p>
             <p></p>
             <p></p>
           </div>
-      </div>
-        
+        </div>
       </div>
     </div>
     <!--**End of the Product section** -->
+
+    <!--**Number section** -->
+
+    <div class="row d-flex justify-content-center my-5 bg-light-gray">
+      <div class="col-md-4 text-center pt-4 pb-4">
+        <p class="font-size-numbers fw-bold">+5</p>
+        <p class="font-size-text-under-numbers fw-bold">Years of expertise</p>
+      </div>
+      <div class="col-md-4 text-center pt-4 pb-4">
+        <p class="font-size-numbers fw-bold">+500</p>
+        <p class="font-size-text-under-numbers fw-bold">IT professionals</p>
+      </div>
+      <div class="col-md-4 text-center pt-4 pb-4">
+        <p class="font-size-numbers fw-bold">+200</p>
+        <p class="font-size-text-under-numbers fw-bold">Projects</p>
+      </div>
+    </div>
+    <!--**End of the Number section** -->
+
+    <!--begining of awards section-->
+    <div class="row mx-5 mt-5">
+      <p class="fw-bold text-heading mt-5">Proven quality of our products</p>
+      <hr class="mx-3" style="color: rgba(0, 0, 0, 0.4)" />
+    </div>
+    <div class="row mx-5">
+      <!--card for award 1-->
+      <div class="col-md-3 rounded-2">
+        <div class="card p-5 my-3 justify-content-center align-items-center">
+          <img
+            class="card-img-top p-3 card-img-top-size"
+            src="images/awards/award (1).png"
+            alt="Photo of award1"
+          />
+          <div class="card-body text-center">
+            <h5 class="card-title">
+              <strong>IoT Global Awards <br />2022</strong>
+            </h5>
+            <p class="card-text">Best Workforce Optimisation Platform</p>
+          </div>
+        </div>
+      </div>
+      <!--card for award 2-->
+      <div class="col-md-3 rounded-2">
+        <div class="card p-5 my-3 justify-content-center align-items-center">
+          <img
+            class="card-img-top p-3 card-img-top-size"
+            src="images/awards/award.png"
+            alt="Photo of award1"
+          />
+          <div class="card-body text-center">
+            <h5 class="card-title">
+              <strong>CX Awards <br />2020</strong>
+            </h5>
+            <p class="card-text">Best Workforce Optimisation Platform</p>
+          </div>
+        </div>
+      </div>
+      <!--card for award 3-->
+      <div class="col-md-3 rounded-2">
+        <div class="card p-5 my-3 justify-content-center align-items-center">
+          <img
+            class="card-img-top p-3 card-img-top-size"
+            src="images/awards/olive-branches-award-symbol.png"
+            alt="Photo of award1"
+          />
+          <div class="card-body text-center">
+            <h5 class="card-title"><strong>Award 3</strong></h5>
+            <p class="card-text">Best Workforce Optimisation Platform</p>
+          </div>
+        </div>
+      </div>
+      <!--card for award 4-->
+      <div class="col-md-3 rounded-2">
+        <div class="card p-5 my-3 justify-content-center align-items-center">
+          <img
+            class="card-img-top p-3 card-img-top-size"
+            src="images/awards/trophy (2).png"
+            alt="Photo of award1"
+          />
+          <div class="card-body text-center">
+            <h5 class="card-title"><strong>Award 4</strong></h5>
+            <p class="card-text">Best Workforce Optimisation Platform</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--end of awards section-->
+
     <!--**Footer** -->
     <footer class="bg-dark-blue text-white text-center text-lg-start mt-3">
       <!-- Grid container -->
@@ -122,7 +371,7 @@
           <div class="col-lg-5 col-md-12 mb-8 mb-md-0">
             <h5 class="">Products</h5>
             <!-- Section: links -->
-            <div class="row pt-4">
+            <div class="row pt-4 mx-3">
               <div class="col-4">
                 <a href="" class="nav-link active"> Home </a>
               </div>
@@ -130,7 +379,7 @@
                 <a href="" class="nav-link active"> About </a>
               </div>
             </div>
-            <div class="row pt-4">
+            <div class="row pt-4 mx-3">
               <div class="col-4">
                 <a href="" class="nav-link active"> Services </a>
               </div>
@@ -199,7 +448,7 @@
               hccs@gmail.com
             </p>
             <p>
-              <i class="bi bi-house me-3"></i> No.04,Bambalapitiya, Sri Lanka
+              <i class="bi bi-house me-3"></i> No.04, Bambalapitiya, Sri Lanka
             </p>
 
             <p><i class="bi bi-telephone-fill me-3"></i> + 94 234 567 88</p>
