--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a href="" class="nav-link active"> Home </a>
+              <a href="index.html" class="nav-link active"> Home </a>
             </li>
             <li class="nav-item active">
-              <a href="" class="nav-link active"> About </a>
+              <a href="about.html" class="nav-link active"> About </a>
             </li>
             <li class="nav-item active">
               <a href="" class="nav-link active"> Services </a>
@@ -364,7 +364,7 @@
     <!--**Footer** -->
     <footer class="bg-dark-blue text-white text-center text-lg-start mt-3">
       <!-- Grid container -->
-      <div class="container p-4">
+      <div class="container p-2">
         <!--Grid row-->
         <div class="row">
           <!--Grid column-->
@@ -373,10 +373,10 @@
             <!-- Section: links -->
             <div class="row pt-4 mx-3">
               <div class="col-4">
-                <a href="" class="nav-link active"> Home </a>
+                <a href="index.html" class="nav-link active"> Home </a>
               </div>
               <div class="col-4">
-                <a href="" class="nav-link active"> About </a>
+                <a href="about.html" class="nav-link active"> About </a>
               </div>
             </div>
             <div class="row pt-4 mx-3">
@@ -454,11 +454,7 @@
             <p><i class="bi bi-telephone-fill me-3"></i> + 94 234 567 88</p>
             <p><i class="bi bi-telephone-fill me-3"></i> + 94 234 567 89</p>
           </div>
-          <!--Grid column-->
-
-          <!--Grid column-->
-
-          <!--Grid column-->
+          
         </div>
         <!--Grid row-->
       </div>
