Home & about Merged

--- a/index.html
+++ b/index.html
@@ -66,12 +66,42 @@
     </nav>
     <!--**End of the Navbar** -->
 
+    <!--Hero section-->
+
+    <!--header image-->
+    <div
+      class="bg-image text-white"
+      style="background-image: url(images/pic1.jpg); height: 95vh"
+    >
+      <div class="mx-5">
+        <p class="p1">Let's create impactful<br />digital products</p>
+        <p class="p2 pt-3">
+          Lorem ipsum dolor sit, Placeat vitae cumque iure, ex earum maiores
+          aspernatur <br />consequuntur libero, necessitatibus
+        </p>
+        <div class="row d-flex my-5 pt-4">
+          <div class="col-md-2 text-center pt-4 pb-4">
+            <h2 class="fw-bold">150+</h2>
+            <p class="p2">Products</p>
+          </div>
+          <div class="col-md-2 text-center pt-4 pb-4">
+            <h2 class="fw-bold">400+</h2>
+            <p class="p2">Techies</p>
+          </div>
+          <div class="col-md-2 text-center pt-4 pb-4">
+            <h2 class="fw-bold">10+</h2>
+            <p class="p2">Years</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!--**Services section -Nethmi** -->
-    <div class="container-fuild">
+    <div class="container-fuild pt-5">
       <div class="row mx-5 text-dark-blue">
-        <p class="fw-bold">Services</p>
-        <p class="display-5 fw-bold ">What we do</p>
-        <p class="lead">
+        <p class="p3">Services</p>
+        <p class="display-5 fw-bold">What we do</p>
+        <p class="p2 fs-5">
           Lorem ipsum dolor sit amet, consectetuer adipiscing elit
         </p>
       </div>
@@ -165,9 +195,11 @@
 
     <!--Winning products-->
     <section class="mx-5">
-      <h1 class="topic-text text-dark-blue">In 2 years over 30 wining products</h1>
+      <h1 class="topic-text text-dark-blue">
+        In 2 years over 30 wining products
+      </h1>
 
-      <p class="ms-4 fs-6">
+      <p class="p2 fs-5">
         We will work with you to create meaningful and impactful products for
         you.
       </p>
@@ -223,6 +255,115 @@
                   </div> -->
       </div>
     </section>
+    <!--End of Winning products section-->
+
+    <!-- Testimonials section-->
+  <hr class="mx-3" style="color: rgba(0, 0, 0, 0.4) "  />
+  <p class=" display-5  p3 mx-5" ><b>Testimonials</b></p>
+  <p class="mx-5 p2 fs-5 ">See what our client say</p>
+ 
+  <!--carousels-->
+  <div class="" style="width: 60%; height: 500px; margin: auto;">
+    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-quote"
+            viewBox="0 0 16 16">
+            <path
+              d="M12 12a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1h-1.388c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 9 7.558V11a1 1 0 0 0 1 1h2Zm-6 0a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1H4.612c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 3 7.558V11a1 1 0 0 0 1 1h2Z" />
+          </svg>
+          <p class="ms-4 fs-5">Since 2019 we've been enjoying the services rendered by Innowise Group to implement a
+            strategically important project on modernization of a network of internal IT systems.</p>
+          <span><img class="w-100 float-end" style="max-width: 200px; max-height:200px; border-radius: 200px;"
+              src="images/person_5.jpeg"><br>
+            <p class="float-start mx-4 h4">Dr. Udo Richter
+            <div class="text-body-secondary mt-1"> Director - 99X</div>
+            </p>
+
+          </span>
+
+
+        </div>
+
+        <div class="carousel-item">
+          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-quote"
+            viewBox="0 0 16 16">
+            <path
+              d="M12 12a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1h-1.388c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 9 7.558V11a1 1 0 0 0 1 1h2Zm-6 0a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1H4.612c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 3 7.558V11a1 1 0 0 0 1 1h2Z" />
+          </svg>
+          <p class="ms-4 fs-5">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.Lorem ipsum dolor sit amet,
+            consectetuer adipiscing elit.</p>
+          <span><img class="w-100 float-end" style="max-width: 200px; max-height:200px; border-radius: 200px;"
+              src="images/person_8.png"><br>
+            <p class="float-start mx-4 h4">Name of the person
+            <div class="text-body-secondary mt-1"> Position</div>
+            </p>
+
+          </span>
+        </div>
+        <div class="carousel-item">
+          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-quote"
+            viewBox="0 0 16 16">
+            <path
+              d="M12 12a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1h-1.388c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 9 7.558V11a1 1 0 0 0 1 1h2Zm-6 0a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1H4.612c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 3 7.558V11a1 1 0 0 0 1 1h2Z" />
+          </svg>
+          <p class="ms-4 fs-5">Since 2019 we've been enjoying the services rendered by Innowise Group to implement a
+            strategically important project on modernization of a network of internal IT systems.</p>
+          <span><img class="w-100 float-end" style="max-width: 200px; max-height:200px; border-radius: 200px;"
+              src="images/person_6.png"><br>
+            <p class="float-start mx-4 h4">Adam Lewin
+            <div class="text-body-secondary mt-1"> DevOps Engineer-Salesforce</div>
+            </p>
+
+          </span>
+        </div>
+
+        <div class="carousel-item">
+          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-quote"
+            viewBox="0 0 16 16">
+            <path
+              d="M12 12a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1h-1.388c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 9 7.558V11a1 1 0 0 0 1 1h2Zm-6 0a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1H4.612c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 3 7.558V11a1 1 0 0 0 1 1h2Z" />
+          </svg>
+          <p class="ms-4 fs-5">Since 2019 we've been enjoying the services rendered by Innowise Group to implement a
+            strategically important project on modernization of a network of internal IT systems.</p>
+          <span><img class="w-100 float-end" style="max-width: 200px; max-height:200px; border-radius: 200px;"
+              src="images/person_7.png"><br>
+            <p class="float-start mx-4 h4">Charlie Wazel
+            <div class="text-body-secondary mt-1"> System Analyst-Dev_Z</div>
+            </p>
+
+          </span>
+        </div>
+        <div class="carousel-item">
+          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-quote"
+            viewBox="0 0 16 16">
+            <path
+              d="M12 12a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1h-1.388c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 9 7.558V11a1 1 0 0 0 1 1h2Zm-6 0a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1H4.612c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 3 7.558V11a1 1 0 0 0 1 1h2Z" />
+          </svg>
+          <p class="ms-4 fs-5">Since 2019 we've been enjoying the services rendered by Innowise Group to implement a
+            strategically important project on modernization of a network of internal IT systems.</p>
+          <span><img class="w-100 float-end" style="max-width: 200px; max-height:200px; border-radius: 200px;"
+              src="images/person_4.jpg"><br>
+            <p class="float-start mx-4 h4">Dr. Udo Richter
+            <div class="text-body-secondary mt-1"> Director - 99X</div>
+            </p>
+
+          </span>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+      data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+      data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+  <!--End of Testimonials section-->
 
     <!--**Product section** -->
     <div class="bg-dark-blue text-white row">
@@ -454,7 +595,6 @@
             <p><i class="bi bi-telephone-fill me-3"></i> + 94 234 567 88</p>
             <p><i class="bi bi-telephone-fill me-3"></i> + 94 234 567 89</p>
           </div>
-          
         </div>
         <!--Grid row-->
       </div>
