Home page Changes

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-quote"
-            viewBox="0 0 16 16">
+            >
             <path
               d="M12 12a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1h-1.388c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 9 7.558V11a1 1 0 0 0 1 1h2Zm-6 0a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1H4.612c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 3 7.558V11a1 1 0 0 0 1 1h2Z" />
           </svg>
@@ -288,7 +288,7 @@
 
         <div class="carousel-item">
           <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-quote"
-            viewBox="0 0 16 16">
+            >
             <path
               d="M12 12a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1h-1.388c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 9 7.558V11a1 1 0 0 0 1 1h2Zm-6 0a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1H4.612c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 3 7.558V11a1 1 0 0 0 1 1h2Z" />
           </svg>
@@ -304,7 +304,7 @@
         </div>
         <div class="carousel-item">
           <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-quote"
-            viewBox="0 0 16 16">
+            >
             <path
               d="M12 12a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1h-1.388c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 9 7.558V11a1 1 0 0 0 1 1h2Zm-6 0a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1H4.612c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 3 7.558V11a1 1 0 0 0 1 1h2Z" />
           </svg>
@@ -321,7 +321,7 @@
 
         <div class="carousel-item">
           <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-quote"
-            viewBox="0 0 16 16">
+            >
             <path
               d="M12 12a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1h-1.388c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 9 7.558V11a1 1 0 0 0 1 1h2Zm-6 0a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1H4.612c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 3 7.558V11a1 1 0 0 0 1 1h2Z" />
           </svg>
@@ -337,7 +337,7 @@
         </div>
         <div class="carousel-item">
           <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-quote"
-            viewBox="0 0 16 16">
+            >
             <path
               d="M12 12a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1h-1.388c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 9 7.558V11a1 1 0 0 0 1 1h2Zm-6 0a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1H4.612c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 3 7.558V11a1 1 0 0 0 1 1h2Z" />
           </svg>
@@ -353,46 +353,38 @@
         </div>
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-      data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-      data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
+    
   </div>
   <!--End of Testimonials section-->
 
     <!--**Product section** -->
-    <div class="bg-dark-blue text-white row">
-      <div class="col-lg-6 pl-1 p-5">
+    <div class="bg-dark-blue text-white row ">
+      <div class="col-lg-6 col-md-12 pl-1 p-5">
         <h1 class="topic-text">Let's Talk About your Product</h1>
         <p class="me-3 pt-4">
           We love engaging with new clients and our community. If you have an
           inquiry about building digital products or any other questions, get in
           touch!
         </p>
-        <div class="row pt-4">
-          <div class="col-lg-3 col-md-2 border border-2 rounded">
+        <div class="row pt-4 mx-3">
+          <div class="col-md-4 col-sm-5 border border-2 rounded">
             jordan@hccs.io
           </div>
-          <div class="col-lg-3 col-md-2"></div>
-          <div class="col-lg-3 col-md-2 border border-2 rounded">
+          <div class="col-md-3 col-sm-1"></div>
+          
+          <div class="col-md-4 col-sm-6 border border-2 rounded">
             +94 789 456 526
           </div>
         </div>
       </div>
-      <div class="col-lg-3"></div>
+      <div class="col-lg-1 col-md-0"></div>
       <!--**Profiles** -->
-      <div class="col-lg-3">
-        <div class="row pt-4">
-          <div class="col-lg-4 col-md-4">
+      <div class="col-lg-4 col-md-12 mt-2 mx-5">
+        <div class="row pt-5">
+          <div class="col-4 ">
             <img src="images/person_1.png " class="" width="100" />
           </div>
-          <div class="col-lg-6 col-md-4 line-space-min pt-3 pl-2">
+          <div class="col-6  line-space-min pt-3 pl-2">
             <p class="text-name">Jordan Belfort</p>
             <p class="">Chairman</p>
             <p>jordan@hccs.io</p>
@@ -401,10 +393,10 @@
           </div>
         </div>
         <div class="row pt-4 pb-4">
-          <div class="col-lg-4 col-md-4">
+          <div class="col-4">
             <img src="images/person_2.png " class="" width="100" />
           </div>
-          <div class="col-lg-6 col-md-4 line-space-min pt-3 pl-2">
+          <div class="col-6  line-space-min pt-3 pl-2">
             <p class="text-name">Andrew Tate</p>
             <p class="">Chairman</p>
             <p>tate@hccs.io</p>
@@ -514,23 +506,23 @@
             <h5 class="">Products</h5>
             <!-- Section: links -->
             <div class="row pt-4 mx-3">
-              <div class="col-4">
+              <div class="col-6">
                 <a href="index.html" class="nav-link active"> Home </a>
               </div>
-              <div class="col-4">
+              <div class="col-6">
                 <a href="about.html" class="nav-link active"> About </a>
               </div>
             </div>
-            <div class="row pt-4 mx-3">
-              <div class="col-4">
+            <div class="row pt-4 mx-3 ">
+              <div class="col-6">
                 <a href="" class="nav-link active"> Services </a>
               </div>
-              <div class="col-4">
+              <div class="col-6">
                 <a href="" class="nav-link active"> Contact </a>
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-12 mb-8 mb-md-0">
+          <div class="col-lg-4 col-md-12 mb-8 mb-md-0 ">
             <h5 class="">Connect</h5>
             <!-- Grid container -->
             <div class="container pt-4">
