Home Page updates

--- a/index.html
+++ b/index.html
@@ -358,8 +358,8 @@
   <!--End of Testimonials section-->
 
     <!--**Product section** -->
-    <div class="bg-dark-blue text-white row ">
-      <div class="col-lg-6 col-md-12 pl-1 p-5">
+    <div class="bg-dark-blue text-white row">
+      <div class="col-lg-6 col-md-12 pl-1 p-5 ">
         <h1 class="topic-text">Let's Talk About your Product</h1>
         <p class="me-3 pt-4">
           We love engaging with new clients and our community. If you have an
@@ -367,24 +367,24 @@
           touch!
         </p>
         <div class="row pt-4 mx-3">
-          <div class="col-md-4 col-sm-5 border border-2 rounded">
+          <div class="col-lg-4 col-md-4 col-sm-5 col-8 border border-2 rounded">
             jordan@hccs.io
           </div>
-          <div class="col-md-3 col-sm-1"></div>
+          <div class="col-lg-3 col-md-3 col-sm-1"></div>
           
-          <div class="col-md-4 col-sm-6 border border-2 rounded">
-            +94 789 456 526
+          <div class="col-lg-4 col-md-4 col-sm-6 col-8 border border-2 rounded">
+            +94 789 456526
           </div>
         </div>
       </div>
       <div class="col-lg-1 col-md-0"></div>
       <!--**Profiles** -->
-      <div class="col-lg-4 col-md-12 mt-2 mx-5">
-        <div class="row pt-5">
-          <div class="col-4 ">
+      <div class="col-lg-4 col-12 mt-2 mx-5 ">
+        <div class="row pt-5 justify-content-center">
+          <div class="col-4">
             <img src="images/person_1.png " class="" width="100" />
           </div>
-          <div class="col-6  line-space-min pt-3 pl-2">
+          <div class="col-6 col-2 line-space-min pt-3 pl-2">
             <p class="text-name">Jordan Belfort</p>
             <p class="">Chairman</p>
             <p>jordan@hccs.io</p>
@@ -392,7 +392,7 @@
             <p></p>
           </div>
         </div>
-        <div class="row pt-4 pb-4">
+        <div class="row pt-4 pb-4 justify-content-center">
           <div class="col-4">
             <img src="images/person_2.png " class="" width="100" />
           </div>
